--- a/home/public/index.html
+++ b/home/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="refugeeAuthorEnv">
 <head>
     <meta charset="utf-8">
     <!--Import Google Icon Font-->
@@ -9,16 +9,27 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>{{title}}</title>
+    <title>Dashboard</title>
 </head>
-<!--Import jQuery before materialize.js-->
+
+<!--Import AngularJS, jQuery and materialize.js-->
 <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="/bower_components/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="/public/js/materialize.min.js"></script>
+<!--Import authorEnv.js-->
+<script type="text/javascript" src="/public/authorEnv.js"></script>
+<!--Import Controller-->
+<script type="text/javascript" src="/public/controller/main.controller.js"></script>
+<script type="text/javascript" src="/public/controller/dashboard.controller.js"></script>
+<script type="text/javascript" src="/public/controller/login.controller.js"></script>
+
 <script>
     $(document).ready(function () {
-        $(".button-collapse").sideNav();
+        $('.button-collapse').sideNav();
     });
 </script>
+
 <body>
 <header>
     <nav class="teal">
@@ -27,7 +38,7 @@
                 <a href="#" data-activates="nav-mobile" class="left button-collapse hide-on-large-only">
                     <i class="material-icons">menu</i>
                 </a>
-                <a href="/" class="brand-logo center">refugeeProject</a>
+                <a ui-sref="main" class="brand-logo center">refugeeProject</a>
             </div>
         </div>
     </nav>
@@ -35,17 +46,17 @@
     <ul id="nav-mobile" class="side-nav fixed" style="overflow: auto; transform: translateX(0px);">
         <li class="center brand-logo"><i style="margin-top: 16px;" class="material-icons large">account_circle</i></li>
         <div class="divider"></div>
-        <li><a href="/">Login</a></li>
-        <li><a href="/">Language</a></li>
-        <li><a href="/api/">API</a></li>
-        <li><a href="/">Documentation</a></li>
+        <li><a href="#/login">Login</a></li>
+        <li><a href="#/lang">Language</a></li>
+        <li><a href="/api">API</a></li>
+        <li><a href="#/doc">Documentation</a></li>
     </ul>
 </header>
 
 <main>
     <div class="row">
         <div class="col s12 m12 l10 push-l2">
-            <div class="container">{{{body}}}</div>
+            <div ng-view></div>
         </div>
     </div>
 </main>
