--- a/home/public/index.html
+++ b/home/public/index.html
@@ -23,36 +23,17 @@
 <script type="text/javascript" src="/public/controller/main.controller.js"></script>
 <script type="text/javascript" src="/public/controller/dashboard.controller.js"></script>
 <script type="text/javascript" src="/public/controller/login.controller.js"></script>
+<script type="text/javascript" src="/public/controller/navigation.controller.js"></script>
+<script type="text/javascript" src="/public/controller/logintab.controller.js"></script>
+<script type="text/javascript" src="/public/controller/registertab.controller.js"></script>
+<!--Import Directives-->
+<script type="text/javascript" src="/public/directives/headnav.directive.js"></script>
+<script type="text/javascript" src="/public/directives/logintab.directive.js"></script>
+<script type="text/javascript" src="/public/directives/registertab.directive.js"></script>
 
-<script>
-    $(document).ready(function () {
-        $('.button-collapse').sideNav();
-    });
-</script>
 
 <body>
-<header>
-    <nav class="teal">
-        <div class="container">
-            <div class="nav-wrapper">
-                <a href="#" data-activates="nav-mobile" class="left button-collapse hide-on-large-only">
-                    <i class="material-icons">menu</i>
-                </a>
-                <a ui-sref="main" class="brand-logo center">refugeeProject</a>
-            </div>
-        </div>
-    </nav>
-    <!-- side navbar, is only permanent on large displays small and medium sized displays show a menu icon to slide the navbar in and out -->
-    <ul id="nav-mobile" class="side-nav fixed" style="overflow: auto; transform: translateX(0px);">
-        <li class="center brand-logo"><i style="margin-top: 16px;" class="material-icons large">account_circle</i></li>
-        <div class="divider"></div>
-        <li><a href="#/login">Login</a></li>
-        <li><a href="#/lang">Language</a></li>
-        <li><a href="/api">API</a></li>
-        <li><a href="#/doc">Documentation</a></li>
-    </ul>
-</header>
-
+<div header-navigation></div>
 <main>
     <div class="row">
         <div class="col s12 m12 l10 push-l2">
