--- a/home/public/index.html
+++ b/home/public/index.html
@@ -6,10 +6,11 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/public/css/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/public/css/stylesheet.min.css" media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Dashboard</title>
+    <title></title>
 </head>
 
 <!--Import AngularJS, jQuery and materialize.js-->
