fixes missing controller in index.html

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -27,6 +27,11 @@
 <script type="text/javascript" src="/public/controller/navigation.controller.js"></script>
 <script type="text/javascript" src="/public/controller/logintab.controller.js"></script>
 <script type="text/javascript" src="/public/controller/registertab.controller.js"></script>
+<script type="text/javascript" src="/public/controller/add.controller.js"></script>
+<script type="text/javascript" src="/public/controller/list.controller.js"></script>
+<script type="text/javascript" src="/public/controller/detail.controller.js"></script>
+<script type="text/javascript" src="/public/controller/guidelist.controller.js"></script>
+<script type="text/javascript" src="/public/controller/search.controller.js"></script>
 <!--Import Directives-->
 <script type="text/javascript" src="/public/directives/headnav.directive.js"></script>
 <script type="text/javascript" src="/public/directives/logintab.directive.js"></script>
