added authentication, login and register

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -20,6 +20,8 @@
 <script type="text/javascript" src="/public/js/materialize.min.js"></script>
 <!--Import authorEnv.js-->
 <script type="text/javascript" src="/public/authorEnv.js"></script>
+<!--Import Services-->
+<script type="text/javascript" src="/public/services/auth.service.js"></script>
 <!--Import Controller-->
 <script type="text/javascript" src="/public/controller/main.controller.js"></script>
 <script type="text/javascript" src="/public/controller/dashboard.controller.js"></script>
