logged in user can now access restricted area

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -44,7 +44,7 @@
 <main>
     <div class="row">
         <div class="col s12 m12 l10 push-l2">
-            <div ng-view></div>
+            <div ng-view ng-cloak></div>
         </div>
     </div>
 </main>
