moved login/register and logout completely to headerbar

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-route/angular-route.min.js"></script>
+<script type="text/javascript" src="/bower_components/angular-translate/angular-translate.min.js"></script>
 <script type="text/javascript" src="/public/js/materialize.min.js"></script>
 <!--Import authorEnv.js-->
 <script type="text/javascript" src="/public/authorEnv.js"></script>
