--- a/home/public/index.html
+++ b/home/public/index.html
@@ -5,7 +5,8 @@
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/public/css/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/bower_components/Materialize/dist/css/materialize.min.css"
+          media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/public/css/stylesheet.min.css" media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,7 +19,7 @@
 <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-translate/angular-translate.min.js"></script>
-<script type="text/javascript" src="/public/js/materialize.min.js"></script>
+<script type="text/javascript" src="/bower_components/Materialize/dist/js/materialize.min.js"></script>
 <!--Import authorEnv.js-->
 <script type="text/javascript" src="/public/authorEnv.js"></script>
 <!--Import Config files-->
@@ -52,7 +53,7 @@
     </div>
 </main>
 <footer class="page-footer teal">
-    <div class="container">
+    <div class="container teal">
         <div class="row">
             <div class="col l4 push-l2 m6 s12">
                 <p class="grey-text text-lighten-4">{{'FOOTER_INFOTEXT'|translate}}</p>
@@ -65,8 +66,8 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright right">
-        &copy; Copyright 2016
+    <div class="footer-copyright">
+        <span class="right copyright white-text">&copy; Copyright 2016</span>
     </div>
 </footer>
 </body>
