--- a/home/public/index.html
+++ b/home/public/index.html
@@ -10,8 +10,7 @@
     <link type="text/css" rel="stylesheet" href="/public/css/stylesheet.min.css" media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <title></title>
+    <title>{{'APP_TITLE'|translate}}</title>
 </head>
 
 <!--Import AngularJS, jQuery and materialize.js-->
