exports for api crud files

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -25,6 +25,8 @@
 <script type="text/javascript" src="/public/config/i18n.config.js"></script>
 <!--Import Services-->
 <script type="text/javascript" src="/public/services/auth.service.js"></script>
+<script type="text/javascript" src="/public/services/categorycrud.service.js"></script>
+<script type="text/javascript" src="/public/services/guidecrud.service.js"></script>
 <!--Import Controller-->
 <script type="text/javascript" src="/public/controller/main.controller.js"></script>
 <script type="text/javascript" src="/public/controller/dashboard.controller.js"></script>
