added functionality to create new guidelines

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="refugeeAuthorEnv">
+<html ng-app="refugeeAuthorEnv" ng-cloak>
 <head>
     <meta charset="utf-8">
     <!--Import Google Icon Font-->
@@ -49,7 +49,7 @@
 <main>
     <div class="row">
         <div class="col s12 m12 l10 push-l2">
-            <div ng-view ng-cloak></div>
+            <div ng-view></div>
         </div>
     </div>
 </main>
