modified guide detail view single guidelines are now visible

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="/public/css/stylesheet.min.css" media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>{{'APP_TITLE'|translate}}</title>
+    <title>Refugees Gießen</title>
 </head>
 
 <!--Import AngularJS, jQuery and materialize.js-->
@@ -36,7 +36,8 @@
 <script type="text/javascript" src="/public/controller/registertab.controller.js"></script>
 <script type="text/javascript" src="/public/controller/add.controller.js"></script>
 <script type="text/javascript" src="/public/controller/list.controller.js"></script>
-<script type="text/javascript" src="/public/controller/detail.controller.js"></script>
+<script type="text/javascript" src="/public/controller/guidedetail.controller.js"></script>
+<script type="text/javascript" src="/public/controller/categorydetail.controller.js"></script>
 <script type="text/javascript" src="/public/controller/guidelist.controller.js"></script>
 <script type="text/javascript" src="/public/controller/search.controller.js"></script>
 <!--Import Directives-->
