added: modal to add new translations, wip: needs author info in metadata metadata can be uncommented when userCrud is implemented

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -17,7 +17,10 @@
 <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-route/angular-route.min.js"></script>
+<script type="text/javascript" src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-translate/angular-translate.min.js"></script>
+<script type="text/javascript" src="/bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
+<script type="text/javascript" src="/bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
 <script type="text/javascript" src="/bower_components/Materialize/dist/js/materialize.min.js"></script>
 <!--Import authorEnv.js-->
 <script type="text/javascript" src="/public/authorEnv.js"></script>
@@ -27,6 +30,8 @@
 <script type="text/javascript" src="/public/services/auth.service.js"></script>
 <script type="text/javascript" src="/public/services/categorycrud.service.js"></script>
 <script type="text/javascript" src="/public/services/guidecrud.service.js"></script>
+<!--Import Filters-->
+<script type="text/javascript" src="/public/filters/boolean.filter.js"></script>
 <!--Import Controller-->
 <script type="text/javascript" src="/public/controller/main.controller.js"></script>
 <script type="text/javascript" src="/public/controller/dashboard.controller.js"></script>
