--- a/home/public/index.html
+++ b/home/public/index.html
@@ -41,6 +41,7 @@
 <script type="text/javascript" src="/public/controller/registertab.controller.js"></script>
 <script type="text/javascript" src="/public/controller/add.controller.js"></script>
 <script type="text/javascript" src="/public/controller/list.controller.js"></script>
+<script type="text/javascript" src="/public/controller/userdetail.controller.js"></script>
 <script type="text/javascript" src="/public/controller/guidedetail.controller.js"></script>
 <script type="text/javascript" src="/public/controller/categorydetail.controller.js"></script>
 <script type="text/javascript" src="/public/controller/guidelist.controller.js"></script>
