added usercrudservice, modified UserDetailView

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -30,6 +30,7 @@
 <script type="text/javascript" src="/public/services/auth.service.js"></script>
 <script type="text/javascript" src="/public/services/categorycrud.service.js"></script>
 <script type="text/javascript" src="/public/services/guidecrud.service.js"></script>
+<script type="text/javascript" src="/public/services/usercrud.service.js"></script>
 <!--Import Filters-->
 <script type="text/javascript" src="/public/filters/boolean.filter.js"></script>
 <!--Import Controller-->
