--- a/home/public/index.html
+++ b/home/public/index.html
@@ -22,6 +22,10 @@
 <script type="text/javascript" src="/bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
 <script type="text/javascript" src="/bower_components/Materialize/dist/js/materialize.min.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+    google.charts.load('current',{packages: ['corechart']});
+</script>
 <!--Import authorEnv.js-->
 <script type="text/javascript" src="/public/authorEnv.js"></script>
 <!--Import Config files-->
