--- a/home/public/index.html
+++ b/home/public/index.html
@@ -7,6 +7,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/bower_components/Materialize/dist/css/materialize.min.css"
           media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/bower_components/flag-icon-css/css/flag-icon.min.css" />
     <link type="text/css" rel="stylesheet" href="/public/css/stylesheet.css" media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
