--- a/home/public/index.html
+++ b/home/public/index.html
@@ -74,7 +74,7 @@
             <div class="col l2 offset-l2 push-l2 m4 offset-m2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="/">{{'FOOTER_ABOUT'|translate}}</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#/about">{{'FOOTER_ABOUT'|translate}}</a></li>
                 </ul>
             </div>
         </div>
